# tempsdb

./: .codeclimate.yml  .coveragerc  .dockerignore  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  docker-compose.yml  requirements.txt  setup.cfg  setup.py  unittest.Dockerfile
.circleci/: config.yml
docs/: chunks.rst  conf.py  exceptions.rst  index.rst  memory-pressure-manager.rst  time-series.rst  usage.rst  varlen.rst
tempsdb/: __init__.py  chunks.pxd  chunks.pyx  database.pxd  database.pyx  exceptions.pyx  iterators.pxd  iterators.pyx  metadata.pxd  metadata.pyx  series.pxd  series.pyx  varlen.pxd  varlen.pyx
tempsdb/chunks/: base.pxd  base.pyx  direct.pxd  direct.pyx  gzip.pxd  gzip.pyx  maker.pxd  maker.pyx  normal.pxd  normal.pyx
tests/: test.sh  test_chunks.py  test_database.py  test_db.py  test_series.py  test_varlen.py
