# coding: utf-8
[metadata]
name = tempsdb
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
license_files = LICENSE
author = Piotr Maślanka
author_email = pmaslanka@smok.co
description = Embedded Cython database for time series that you need to send somewhere
url = https://github.com/smok-serwis/tempsdb
project-urls =
    Documentation = https://tempsdb.readthedocs.io/
	Code = https://github.com/smok-serwis/tempsdb
	Issue tracker = https://github.com/smok-serwis/tempsdb/issues
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: POSIX
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries
    Topic :: Database

[pycodestyle]
max-line-length = 100

[pep8]
max-line-length = 100

[bdist_wheel]
universal = 1

